--- a/apps/client/src/features/editor/styles/table.css
+++ b/apps/client/src/features/editor/styles/table.css
@@ -1,7 +1,7 @@
 .tableWrapper {
   margin-top: 1rem;
   margin-bottom: 1rem;
-  overflow-x: auto;
+  overflow-x: visible;
   & table {
     overflow-x: hidden;
   }
