feat: Add base comment formatting

--- a/apps/client/src/features/comment/components/comment.module.css
+++ b/apps/client/src/features/comment/components/comment.module.css
@@ -41,3 +41,13 @@
     }
 }
 
+.bubbleMenu {
+    display: flex;
+    flex-wrap: wrap;
+    width: fit-content;
+
+    .active {
+        color: light-dark(var(--mantine-color-blue-8), var(--mantine-color-gray-5));
+    }
+}
+
