--- a/apps/client/src/features/comment/components/comment.module.css
+++ b/apps/client/src/features/comment/components/comment.module.css
@@ -50,3 +50,13 @@
     }
 }
 
+.bubbleMenu {
+    display: flex;
+    flex-wrap: wrap;
+    width: fit-content;
+
+    .active {
+        color: light-dark(var(--mantine-color-blue-8), var(--mantine-color-gray-5));
+    }
+}
+
